Fixed Alignment & styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,5 +23,18 @@
   padding-top: 5px;
   padding-bottom: 5px;
   padding-left: 12px;
-  font-size: 0.7em;
+  font-size: 0.8em;
+}
+
+body {
+  font-size: 0.8em;
+}
+
+td {
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+}
+
+.form-control {
+  font-size: 1em;
 }
